--- a/package.json
+++ b/package.json
@@ -6,11 +6,13 @@
   "dependencies": {
     "apollo-server-express": "^3.3.0",
     "cors": "^2.8.5",
+    "dayjs": "^1.10.6",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "express-graphql": "^0.12.0",
     "graphql": "^15.5.1",
-    "mongoose": "^6.0.2"
+    "mongodb": "^4.1.1",
+    "mongoose": "^6.0.4"
   },
   "devDependencies": {
     "@babel/core": "^7.15.0",
