--- a/package.json
+++ b/package.json
@@ -3,6 +3,9 @@
   "version": "1.0.0",
   "main": "index.js",
   "license": "MIT",
+  "scripts": {
+    "start": "nodemon app.ts"
+  },
   "dependencies": {
     "apollo-server-express": "^3.3.0",
     "cors": "^2.8.5",
@@ -10,9 +13,11 @@
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "express-graphql": "^0.12.0",
+    "express-validator": "^6.12.1",
     "graphql": "^15.5.1",
     "mongodb": "^4.1.1",
-    "mongoose": "^6.0.4"
+    "mongoose": "^6.0.4",
+    "uuid": "^8.3.2"
   },
   "devDependencies": {
     "@babel/core": "^7.15.0",
@@ -20,8 +25,9 @@
     "@babel/preset-env": "^7.15.0",
     "@types/express": "^4.17.13",
     "@types/node": "^16.7.4",
+    "@types/uuid": "^8.3.1",
     "babel-loader": "^8.2.2",
-    "nodemon": "^2.0.12",
+    "nodemon": "^2.0.13",
     "ts-node": "^10.2.1",
     "typescript": "^4.4.2"
   }
