--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   },
   "dependencies": {
     "apollo-server-express": "^3.3.0",
+    "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
     "dayjs": "^1.10.6",
     "dotenv": "^10.0.0",
@@ -15,15 +16,21 @@
     "express-graphql": "^0.12.0",
     "express-validator": "^6.12.1",
     "graphql": "^15.5.1",
-    "mongodb": "^4.1.1",
-    "mongoose": "^6.0.4",
+    "jsonwebtoken": "^8.5.1",
+    "mongodb": "^4.5.0",
+    "mongoose": "^6.3.1",
+    "mongoose-unique-validator": "^3.0.0",
+    "multer": "^1.4.4",
     "uuid": "^8.3.2"
   },
   "devDependencies": {
     "@babel/core": "^7.15.0",
     "@babel/node": "^7.14.9",
     "@babel/preset-env": "^7.15.0",
+    "@types/bcryptjs": "^2.4.2",
     "@types/express": "^4.17.13",
+    "@types/jsonwebtoken": "^8.5.8",
+    "@types/mongoose-unique-validator": "^1.0.6",
     "@types/node": "^16.7.4",
     "@types/uuid": "^8.3.1",
     "babel-loader": "^8.2.2",
