--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
     "dayjs": "^1.10.6",
-    "dotenv": "^10.0.0",
+    "dotenv": "^16.0.0",
     "express": "^4.17.1",
     "express-graphql": "^0.12.0",
     "express-validator": "^6.12.1",
@@ -31,6 +31,7 @@
     "@types/express": "^4.17.13",
     "@types/jsonwebtoken": "^8.5.8",
     "@types/mongoose-unique-validator": "^1.0.6",
+    "@types/multer": "^1.4.7",
     "@types/node": "^16.7.4",
     "@types/uuid": "^8.3.1",
     "babel-loader": "^8.2.2",
